objects/Customer_Satisfaction_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>No opinion</fullName>
                </value>
                <value>
                    <fullName>Somewhat unsatisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friendly</fullName>
                </value>
                <value>
                    <fullName>No opinion</fullName>
                </value>
                <value>
                    <fullName>Unfriendly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Satisfaction Survey</label>
    <nameField>
        <label>Customer Satisfaction Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>